# python-spreadsheet-reader

./: .gitignore  README.md  main.py  pyproject.toml
python_spreadsheet_reader/readers/: exceptions.py  xlsx.py
